2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* posix/tst-sysconf.c (posix_options): Only use
	_POSIX_PRIORITIZED_IO, _POSIX_PRIORITY_SCHEDULING, and
	_POSIX_SYNCHRONIZED_IO when they are defined
	* sysdeps/mach/hurd/bits/posix_opt.h:
	(_POSIX_PRIORITY_SCHEDULING): Undefine macro.
	(_XOPEN_REALTIME): Undefine macro.
	(_XOPEN_REALTIME_THREADS): Undefine macro.
	(_XOPEN_SHM): Undefine macro.
	[__USE_XOPEN2K8] (_POSIX_THREAD_ROBUST_PRIO_INHERIT): Define
	macro to -1.
	[__USE_XOPEN2K8] (_POSIX_THREAD_ROBUST_PRIO_PROTECT): Define
	macro to -1.
	(_POSIX_ASYNC_IO): Undefine macro.
	(_POSIX_PRIORITIZED_IO): Undefine macro.
	(_POSIX_SPIN_LOCKS): Define macro to -1.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* bits/sigaction.h [__USE_XOPEN2K8]: Define SA_RESTART,
	SA_NODEFER, SA_RESETHAND.
	* sysdeps/mach/hurd/bits/fcntl.h [__USE_XOPEN2K8]: Define
	O_NOFOLLOW, O_DIRECTORY, O_CLOEXEC, F_GETOWN, F_SETOWN,
	F_DUPFD_CLOEXEC.

2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* elf/Makefile (pldd-modules): Define unconditionally.

2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/mach/hurd/opendir.c (__opendirat): New function.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* hurd/hurdchdir.c (_hurd_change_directory_port_from_name):
	Return ENOENT when name is empty.
	* sysdeps/mach/hurd/chroot.c (chroot): Likewise.

2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* include/libc-symbols.h [NO_HIDDEN] (hidden_nolink): New macro.

	* nss/makedb.c (MAP_POPULATE): If not defined, define to zero.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Fix mlock in all cases except non-readable pages.
	* sysdeps/mach/hurd/mlock.c (mlock): Give VM_PROT_READ
	instead of VM_PROT_ALL as parameter to __vm_wire function.

	* sysdeps/mach/hurd/mkdir.c: Include <string.h>.
	(__mkdir): When path is `/', just fail with EEXIST.
	* sysdeps/mach/hurd/mkdirat.c: Likewise.
